Highlight textual additions in green, not yellow
This is more consistent with U.S. cultural norms. I have tested this in
Coblis
(http://www.color-blindness.com/coblis-color-blindness-simulator/), and
this works great for folks with protanomaly, deuteranomaly,
tritanomaly, protanopia, deuteranopia, tritanopia, and even
achromatopsia and blue cone monochromacy. Closes #158.

--- a/htdocs/css/page-elements.css
+++ b/htdocs/css/page-elements.css
@@ -236,7 +236,7 @@ div.full-text del, div.full-text s {
 	color: #c00;
 }
 div.full-text ins {
-	background-color: #ff0;
+	background-color: #98fb98;
 	color: #000;
 	font-style: normal;
 	text-decoration: none;
