Fix broken hover-div CSS
This isn't pretty, but it's not horrific. Toward #266.

--- a/htdocs/css/page-elements.css
+++ b/htdocs/css/page-elements.css
@@ -161,6 +161,15 @@ div.poll-number {
 
 /*	INFO BALLOONS */
 
+.qtip {
+	background-color: #dccbaf;
+	text-align: left;
+}
+	.qtip .ui-tooltip-content {
+		padding: .5em;
+		font-size: .9em;
+	}
+
 .balloon {
 	position: relative;
 	z-index: 0;
