--- a/htdocs/css/new/master.css
+++ b/htdocs/css/new/master.css
@@ -10,7 +10,7 @@ Colors:
 /* Main */
 body {
 	font-family: Verdana, Arial, sans-serif;
-	font-size: medium;
+	font-size: large;
 	text-align: center;
 	color: #333;
 	background: #243a51 url('/images/templates/new/background.png') no-repeat top center;
