--- a/htdocs/css/page-elements.css
+++ b/htdocs/css/page-elements.css
@@ -339,7 +339,7 @@ div#public-portfolio .bill {
 /* Subsection Tabs
 --------------------*/
 .tabs > ul {
-	list-style: none;
+	list-style-type: none;
 	margin: 0 1em 0 0;
 	padding: 0;
 	clear: both;
