--- a/htdocs/css/new/master.css
+++ b/htdocs/css/new/master.css
@@ -294,6 +294,7 @@ div#content ul {
 
 #house-bill-count {
 	margin-top: 1em;
+	padding: 0;
 	width: 213px;
 	height: 49px;
 	background-image: url('/images/templates/new/house-bill-count.jpg');
@@ -302,6 +303,7 @@ div#content ul {
 
 #senate-bill-count {
 	margin-top: 1em;
+	padding: 0;
 	width: 213px;
 	height: 49px;
 	background-image: url('/images/templates/new/senate-bill-count.jpg');
