--- a/htdocs/css/new/master.css
+++ b/htdocs/css/new/master.css
@@ -48,7 +48,7 @@ h4 {
 		color: #000 !important;
 	}
 		h1 a:hover, h2 a:hover, h3 a:hover {
-			text-decoration: underline
+			text-decoration: underline;
 			color: #c6a952;
 		}
 
