--- a/htdocs/css/page-elements.css
+++ b/htdocs/css/page-elements.css
@@ -352,19 +352,26 @@ div#public-portfolio .bill {
 /* Subsection Tabs
 --------------------*/
 .tabs > ul {
-	list-style-type: none;
+	list-style-type: none !important;
 	margin: 0 1em 0 0;
 	padding: 0;
 	clear: both;
-	border-bottom: 1px solid #ccc;
+	border: 0;
 	height: 20px;
+	background-color: transparent;
 }
+	.tabs > ul.ui-widget.ui-widget-content {
+		border: 0;
+	}
 	.tabs > ul li {
 		float: left;
 		margin-right: 5px;
 		text-align: center;
 		font-weight: bold;
 	}
+		.tabs > ul li.ui-state-active {
+			background-color: #dccbaf;
+		}
 		.tabs > ul li a {
 			display: block;
 			height: 20px;
