Display register/login links on mobile

--- a/htdocs/css/new/master.css
+++ b/htdocs/css/new/master.css
@@ -574,7 +574,7 @@ a.balloon div {
 	#sidebar {
 		display: none;
 	}
-	#date-status, p.quote, #bri, #watch, #bill-progress, #facebook {
+	#date, #status, p.quote, #bill-progress {
 		display: none;
 	}
 
