--- a/htdocs/css/page-elements.css
+++ b/htdocs/css/page-elements.css
@@ -744,7 +744,7 @@ body#body-bills div#options ul {
 			#portfolio-sidebar .bill .last-updated {
 				text-transform: uppercase;
 				font-size: .8em;
-				color: red;
+				color: #900;
 			}
 
 
