--- a/htdocs/css/new/master.css
+++ b/htdocs/css/new/master.css
@@ -469,7 +469,7 @@ a.balloon div {
 		font-weight: normal;
 		background-color: yellow;
 	}
-#body-search .results url {
+#body-search .results .url {
 	color: #999;
 	font-size: .85em;
 	margin-top: 0;
