Fight disinformation with a warning about vaccines
Any bill tagged with "vaccine" or "vaccines" will now have a prominent alert with a link to CDC.gov.

--- a/htdocs/css/page-elements.css
+++ b/htdocs/css/page-elements.css
@@ -811,3 +811,10 @@ meter {
 	background: #CC4600;
 	background:orange;
 	}
+
+/* Disinformation alerts (e.g., vaccine bills) */
+#disinformation {
+	border: 3px solid red;
+	padding: .5em;
+	margin: .5em;
+}
