--- a/htdocs/css/jquery-ui.theme.css
+++ b/htdocs/css/jquery-ui.theme.css
@@ -41,7 +41,7 @@
 }
 .ui-widget-header {
 	border: 1px solid #dccbaf;
-	background: #dccbaf url("/css/jqueryui/custom/images/ui-bg_highlight-soft_100_dccbaf_1x100.png") 50% 50% repeat-x;
+	background: #dccbaf;
 	color: #333;
 	font-weight: bold;
 }
