Correct legislator's shortname

--- a/htdocs/includes/templates/legislators.html
+++ b/htdocs/includes/templates/legislators.html
@@ -46,7 +46,7 @@
             <li><a href="/legislator/wcgreen/">Chad Green</a></li>
             <li><a href="/legislator/tgriffin/">Tim Griffin</a></li>
             <li><a href="/legislator/cehayes/">Cliff Hayes</a></li>
-            <li><a href="/legislator/dihlemer/">Dan Helmer</a></li>
+            <li><a href="/legislator/dihelmer/">Dan Helmer</a></li>
             <li><a href="/legislator/rahenson/">Rozia Henson</a></li>
             <li><a href="/legislator/pmhernandez/">Phil Hernandez</a></li>
             <li><a href="/legislator/clherring/">Charniele Herring</a></li>
